# gitshelves

./: .gitignore  .spellcheck.yaml  AGENTS.md  README.md  llms.txt  pyproject.toml
.github/workflows/: 01-lint-format.yml  02-tests.yml  03-docs.yml  build-stl.yml
dict/: allow.txt
docs/: cli_matrix.md  gridfinity_design.md  index.md  prompt-docs-summary.md  prompts-codex-docs.md  prompts-codex-refactor.md  prompts-codex-spellcheck.md  prompts-codex-tests.md  prompts-codex.md  repo_feature_summary_prompt.md  usage.md  viewer.html
docs/prompts/codex/: ci-fix.md  implement.md  polish.md  (+1 more)
gitshelves/: __init__.py  baseplate.py  cli.py  fetch.py  readme.py  scad.py
gitshelves/cli/: __init__.py  __main__.py
gitshelves/core/: __init__.py  contributions.py  github.py  metadata.py
gitshelves/data/: __init__.py  baseplate_1x12.scad  baseplate_2x6.scad
gitshelves/render/: __init__.py  baseplate.py  scad.py  static.py
openscad/: baseplate_1x12.scad  baseplate_2x6.scad  contrib_cube.scad  shelf.scad  shelf_with_mount_holes.scad
scripts/: migrate_package_layout.py
stl/: shelf.stl  shelf_with_mount_holes.stl
tests/: conftest.py  test_baseplates.py  test_cli.py  test_cli_help.py  test_core_contributions.py  test_core_github_token.py  test_core_metadata.py  test_fetch.py  test_gridfinity_doc.py  test_readme.py  test_readme_doc.py  test_render_static.py  test_scad.py  test_shelf_scad.py  test_usage_doc.py  test_viewer.py  test_workflow.py
tests/snapshots/: contrib_cube_levels3.scad  gridfinity_plate_2024_columns4.scad  monthly_summary_2024_row4.scad
(+1 files in other folders)
