[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitshelves"
version = "0.1.0"
dependencies = ["requests"]

[tool.setuptools]
packages = ["gitshelves", "gitshelves.data"]

[tool.setuptools.package-data]
gitshelves = ["data/*.scad"]

[tool.black]
line-length = 88
exclude = '''
/(openscad/lib)/
'''
